# dummyxarray

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .yamllint  404.html  CHANGELOG_CF_XARRAY.md  CONTRIBUTING.md  FEATURES_AND_TESTS.md  LICENSE  MANIFEST.in  README.md  README.md.old  REORGANIZATION.md  SETUP_COMPLETE.md  activation.sh  climate_model_spec.yaml  climate_template.yaml  daily_climate_template.yaml  dataset_recipe.json  dataset_recipe.py  dummy_xarray.md  dummy_xarray.py  example.py  example_from_xarray.py  example_history.py  example_populate.py  index.html  mkdocs.yml  ncdump_imported_template.yaml  objects.inv  pixi.toml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  docs.yml  release.yml
CF_STANDARDS_APPROACH/: index.html
api/array/: index.html
api/dataset/: index.html
api/mixins/cf-compliance/: index.html
api/mixins/data-generation/: index.html
api/mixins/history/: index.html
api/mixins/io/: index.html
api/mixins/provenance/: index.html
api/mixins/validation/: index.html
architecture/: index.html
docs/: CF_STANDARDS_APPROACH.md  architecture.md  examples.md  index.md  testing.md
docs/api/: array.md  dataset.md
docs/api/mixins/: cf-compliance.md  data-generation.md  history.md  io.md  provenance.md  validation.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: basic-usage.md  cf-compliance.md  cf-standards.md  encoding.md  geospatial-workflows.md  history-tracking.md  intake-catalogs.md  mfdataset.md  ncdump-import.md  spatial-metadata.md  stac-catalogs.md  validation.md  yaml-export.md
examples/: README.md  dataset_history.dot  dataset_history.mmd  example_cf_compliance.py  example_cf_standards.py  example_from_xarray.py  example_groupby_time.py  example_history.py  example_mfdataset.py  example_ncdump_import.py  example_populate.py  example_provenance.py  example_visualize.py  index.html  intake_catalog_example.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/dummyxarray/: __init__.py  cf_compliance.py  cf_standards.py  core.py  data_generation.py  history.py  io.py  mfdataset.py  ncdump_parser.py  provenance.py  stac.py  time_utils.py  validation.py
src/dummyxarray/mixins/: file_tracker.py
testing/: index.html
tests/: README.md  conftest.py  test_cf_compliance.py  test_dummy_xarray.py  test_history.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_workflows.py
tests/unit/: __init__.py  test_data_generation.py  test_history.py  test_io.py  test_mfdataset.py  test_ncdump_parser.py  test_provenance.py  test_stac.py  test_validation.py
user-guide/basic-usage/: index.html
user-guide/cf-compliance/: index.html
user-guide/cf-standards/: index.html
user-guide/encoding/: index.html
user-guide/geospatial-workflows/: index.html
user-guide/history-tracking/: index.html
user-guide/intake-catalogs/: index.html
user-guide/mfdataset/: index.html
user-guide/ncdump-import/: index.html
user-guide/spatial-metadata/: index.html
user-guide/stac-catalogs/: index.html
user-guide/validation/: index.html
user-guide/yaml-export/: index.html
