[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "dummyxarray"
version = "0.1.0"
description = "A minimal xarray-like dummy dataset structure for prototyping and teaching."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Pavan Siligam" }
]
requires-python = ">=3.10"

# Pixi manages dependencies — leave empty
dependencies = []

[project.urls]
Homepage = "https://github.com/siligam/dummyxarray"
Repository = "https://github.com/siligam/dummyxarray"

################################
# Hatch build configuration    #
################################

[tool.hatch.build]
exclude = [
  "/tests",
  "/docs",
  ".github",
  ".pixi",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dummyxarray"]


###############################
# Ruff (linting)              #
###############################

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "I",   # import sorting
  "B",   # flake8-bugbear
  "E",   # pycodestyle errors
  "F",   # pyflakes
]
ignore = [
  "E501",  # line length handled by formatter
]


###############################
# Black (formatting)          #
###############################

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"


###############################
# Pyright (type checking)     #
###############################

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"


###############################
# Pytest                      #
###############################

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
